reference-llvm/tests/should-fail/fail6.mu
// nonexistant intrinsic

function @entry foo() {
    [foobar "hello, world", .console];
}
